# OpenGrid

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.dev  PROJECT_STATUS.md  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  python-ci.yml
examples/: quickstart.py
modeling/: network_model.py
opengrid/: __init__.py  cli.py
opengrid/ai/: __init__.py  analysis_interpreter.py  openai_agent.py  prompt_templates.py
opengrid/analysis/: __init__.py  contingency.py  harmonic.py  load_flow.py  optimization.py  short_circuit.py  stability.py
opengrid/api/: __init__.py  app.py  models.py
opengrid/data/: __init__.py  mock_data.py  mock_networks.py  sample_cases.py
opengrid/modeling/: __init__.py  components.py  network_model.py
src/: main.cpp
tests/: main_test.cpp
visualization/: README.md
